# 3-package-fennec_fox

./: Pipfile  README.md  example.py  pyproject.toml
.github/workflows/: automated-test.yml
quote_pkg/: __init__.py  core.py  data.py
tests/: test_core.py
